--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "name": "silaswint/laravel-mailcatcher",
     "require": {
         "spatie/laravel-package-tools": "^1.16",
-        "illuminate/support": "^10 || ^11",
-        "illuminate/mail": "^10 || ^11",
-        "illuminate/config": "^10 || ^11",
-        "laravel/framework": "^10 || ^11",
+        "illuminate/support": "^10 || ^11 || ^12",
+        "illuminate/mail": "^10 || ^11 || ^12",
+        "illuminate/config": "^10 || ^11 || ^12",
+        "laravel/framework": "^10 || ^11 || ^12",
         "aws/aws-sdk-php": "^3.295.10"
     },
     "autoload": {
